# pylemura

./: .gitignore  CHANGELOG.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.claude/: settings.json
src/pylemura/: __init__.py
src/pylemura/adapters/: __init__.py  openai_compatible.py
src/pylemura/agent/: __init__.py  session_manager.py
src/pylemura/agent/execution/: __init__.py  continuation_planner.py  final_response_formatter.py  goal_injector.py  step_counter.py  tool_response_processor.py
src/pylemura/context/: __init__.py  context_manager.py  history_compression.py  in_memory_scratchpad_adapter.py  in_memory_storage_adapter.py  sandwich_compression.py  short_term_memory_registry.py  summary_injection.py
src/pylemura/logger/: __init__.py  default_logger.py
src/pylemura/mcp/: __init__.py  mcp_client.py  mcp_client_registry.py
src/pylemura/media/: __init__.py  media_bridge.py
src/pylemura/rag/: __init__.py  in_memory_rag_adapter.py
src/pylemura/skills/: __init__.py  skill_injector.py
src/pylemura/tools/: __init__.py  schema_validator.py  tool_firewall.py  tool_registry.py
src/pylemura/tools/builtin/: __init__.py  media.py  short_term_memory.py
src/pylemura/types/: __init__.py  adapters.py  agent.py  context.py  errors.py  logger.py  mcp.py  rag.py  skills.py  storage.py  tools.py
tests/unit/agent/: test_session_manager.py
tests/unit/context/: test_short_term_memory.py
tests/unit/logger/: test_default_logger.py
tests/unit/mcp/: test_mcp_registry.py
tests/unit/tools/: test_schema_validator.py
