[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylemura"
version = "1.1.0"
description = "Provider-agnostic agentic AI runtime for Python — Python portage of lemura"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agent", "llm", "react", "agentic", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []  # zero required dependencies

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://lemura.makix.fr"
Repository = "https://github.com/rzafiamy/pylemura"
Issues = "https://github.com/rzafiamy/pylemura/issues"
Documentation = "https://lemura.makix.fr"

[tool.hatch.build.targets.wheel]
packages = ["src/pylemura"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
